# sdl3_vulkan_triangle

./: CMakeLists.txt  README.md  build.bat  run.bat  shader.bat
shaders/: shader2d.vert
src/: main.c
